--- a/static/src/output.css
+++ b/static/src/output.css
@@ -588,10 +588,6 @@ video {
   }
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
 .fixed {
   position: fixed;
 }
@@ -611,10 +607,6 @@ video {
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .right-0 {
@@ -877,14 +869,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
 }
 
 .pr-10 {
@@ -1155,6 +1139,13 @@ body {
   padding: 0.5rem;
   min-height: 2.5rem;
   width: 2.5rem;
+}
+
+/* Leaderboard item hover effect */
+
+.leaderboard-item:hover {
+  background-color: var(--background-alt) !important;
+  color: var(--text-primary) !important;
 }
 
 /* Form styles */
